Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           </div>
           <div class="feature-card">
             <div class="feature-icon"><i class="fas fa-dumbbell"></i></div>
-            <h3>برنامج تمارين خاص بكي</h3>
+            <h3>برنامج تمارين خاص بكِ</h3>
             <p>
               برنامج تمارين مخصص يناسب مستواك البدني ويساعدك على تحقيق أهدافك
               بكفاءة.
@@ -279,3 +279,4 @@
     <script src="script.js"></script>
   </body>
 </html>
+
